--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,12 @@ mcp_kakao_local = "mcp_kakao_local:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.9",
+]
+
+[tool.ruff]
+line-length = 100
+indent-width = 2
